<resources>
    <string name="app_name">Calculadora de pa</string>
    <string name="quantitat_grams">Quants grams de pa vols?</string>
    <string name="calcular">Calcular!</string>
    <string name="titolRecepta">RECEPTA:</string>
    <string name="farinaTitle">Farina:</string>
    <string name="massa_mareTitle">Massa mare:</string>
    <string name="aiguaTitle">Aigua:</string>
    <string name="salTitle">Sal:</string>
    <string name="nombre_de_grams">Nombre de grams</string>
    <string name="configuracio">Configuració</string>
    <string name="farina_a_la_massa_mare">Farina a la massa mare:</string>
    <string name="aigua_a_la_massa_mare">Aigua a la massa mare:</string>
    <string name="guardar">Guardar</string>
    <string name="g">g</string>
    <string name="massa_mare">Massa mare</string>
    <string name="poolish">Poolish</string>
    <string name="perdua">Pèrdua:</string>
    <string name="preferment_title">Preferment:</string>
    <string name="preferment">Preferment</string>
    <string name="TitolPreferment">PREFERMENT:</string>
</resources>
